<resources>
    <string name="app_name">scrumble</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login_message">No account yet? Create one</string>
    <string name="sign_up_message">Already a member? Login</string>

    <string name="my_tasks">My Tasks</string>
    <string name="scrum_board">Scrum Board</string>
    <string name="daily_scrum">Daily Scrum</string>
    <string name="projects">Projects</string>

    <string name="project">Project</string>
    <string name="sprint">Sprint</string>
    <string name="sprints">Sprints</string>
    <string name="task">Task</string>
    <string name="team">Team</string>

    <string name="name">Name</string>
    <string name="info">Info</string>
    <string name="product_owner">Product Owner</string>
    <string name="team_member">Team Member</string>
    <string name="sprint_number">Sprint Number</string>
    <string name="start_date">Start Date</string>
    <string name="deadline">Deadline</string>
    <string name="color">Color</string>
    <string name="select_color">Select color</string>

    <string name="current_sprint">Current Sprint</string>
    <string name="set_current_sprint">Set Current Sprint</string>
    <string name="product_backlog">Product Backlog</string>

    <string name="change_project">Change project</string>
    <string name="refresh">Refresh</string>
    <string name="confirm_refresh">You are about to refresh the whole project\nThis may take a few seconds...</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">Do you really want to log out?</string>

    <string name="responsible">Responsible</string>
    <string name="verify">Verify</string>
    <string name="rejections">Rejections</string>
    <string name="close">Close</string>

    <string name="error_username">Please pick between 3 and 30 characters</string>
    <string name="error_username_exists">Username is not available. Please pick another one</string>
    <string name="error_password">Please pick between 5 and 30 characters</string>
    <string name="error_confirm_password">Passwords do not match</string>
    <string name="error_enter_name">Please enter a name</string>
    <string name="error_enter_info">Please enter some information about the task</string>
    <string name="error_select_team_member">Please select a team member</string>
    <string name="error_enter_product_owner">Please specify a product owner</string>
    <string name="error_enter_sprint_number">Please specify a sprint number</string>
    <string name="error_sprint_number_integer">The sprint number can only be a number</string>
    <string name="error_sprint_number_exists">A sprint with this number already exists</string>
    <string name="error_current_project_current_sprint">Please create a project first and specify a current sprint</string>
    <string name="error_current_project">Please create a project first</string>
    <string name="error_whitespaces">No whitespaces please</string>
    <string name="error_user_already_involved">User is already involved in this project</string>
    <string name="error_username_does_not_exist">No user with the given name exists</string>
    <string name="error_no_current_project">No current project specified\nYou should select or create one</string>
    <string name="error_no_current_sprint">No current sprint specified\nYou should select or create one</string>
    <string name="error_sprint_collision">Sprints cannot overlap</string>

    <string name="missing">MISSING</string>

    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="remove_task">Remove Task</string>

    <string name="move_to_product_backlog">To Product Backlog</string>

    <string name="show_daily_scrum_of">Show dailyscrum of</string>
    <string name="whole_project">Whole project</string>

    <string name="did_you_know_that">Did you know that...</string>
    <string-array name="tips">
        <item>the productowner can also work on the project?</item>
        <item>dailyscrums are generated daily?</item>
        <item>100% of scrumble customers are happy customers?</item>
        <item>dailyscrums are generated daily?</item>
        <item>the dailyscrums of MISSING members are marked red?</item>
        <item>a user can work on various projects?</item>
        <item>you can help to improve scrumble by answering the questionnaire?</item>
        <item>you can add multiple team members at once?</item>
        <!--<item>ORG\'s English is not the yellow from the egg?</item>-->
        <item>there is a scrumble desktop application too?</item>
        <item>scrumble was developed by SPOGSS (5AHIFS 2018/19)?</item>
        <item>scrumble uses Kotlin, C#, MongoDB, OracleDB, JavaScript, Node.js and HTML?</item>
        <item>scrumble is hosted on Heroku?</item>
    </string-array>
</resources>
