<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/popup_add_sprint_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_four_dp"
        android:layout_marginEnd="@dimen/twenty_four_dp"
        android:layout_marginBottom="@dimen/twelve_dp"
        android:hint="@string/sprint_number"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/popup_add_sprint_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_four_dp"
        android:layout_marginEnd="@dimen/twenty_four_dp"
        android:layout_marginBottom="@dimen/twelve_dp"
        android:hint="@string/start_date"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent"
        android:focusable="false"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/popup_add_sprint_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_four_dp"
        android:layout_marginEnd="@dimen/twenty_four_dp"
        android:layout_marginBottom="@dimen/twelve_dp"
        android:hint="@string/deadline"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent"
        android:focusable="false"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/popup_add_sprint_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_four_dp"
        android:layout_marginEnd="@dimen/twenty_four_dp"
        android:layout_marginBottom="6dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp" />

</LinearLayout>